examples/errors/structure/field_in_body.abc
X:1
T:Field In Body
K:C
CDEF|GABc|
M:3/4
% S002: Field in music body
cBAG|FEDC|
